<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_mainpage"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_mainpage" />
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_download" />
    <item
        android:id="@+id/action_updateconfig"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_updateconfig" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"  
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_eixt"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit" />

</menu>
