<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/goBtn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/progressBar"
        android:onClick="goBtnClick"
        android:text="@string/goText" />

    <EditText
        android:id="@+id/uText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/goBtn"
        android:layout_alignBottom="@+id/goBtn"
        android:layout_toLeftOf="@+id/goBtn"
        android:ellipsize="end"
        android:hint="@string/urlHint"
        android:inputType="textUri"
        android:singleLine="true"
        android:text="@string/defaultUrl"
        android:imeOptions="actionGo" />

    <WebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/uText" />

</RelativeLayout>